compiler/testData/diagnostics/testsWithJdk21/newListMethods.diag.txt
/newListMethods.kt:26:7: error: unresolved reference: getFirst
    x.getFirst()
      ^
/newListMethods.kt:27:7: error: function invocation 'first()' expected
    x.first // synthetic property for getFirst()
      ^
/newListMethods.kt:29:7: error: unresolved reference: getLast
    x.getLast()
      ^
/newListMethods.kt:30:7: error: function invocation 'last()' expected
    x.last
      ^

